# exeyezone

./: API_FIX_DOCUMENTATION.md  API_FUNCTIONS_DOCUMENTATION.md  BLOG_DETAIL_EXECUTIVE_SUMMARY.md  BLOG_DETAIL_REDESIGN_COMPLETE.md  BLOG_DETAIL_TESTING_GUIDE.md  BLOG_FAKE_DATA_GENERATION.md  BLOG_IMPLEMENTATION_COMPLETE.md  BLOG_IMPLEMENTATION_SUMMARY.md  BLOG_REDESIGN_COMPLETE.md  BLOG_TESTING_GUIDE.md  BLOG_UPDATES_COMPLETE.md  COURSE_IMPLEMENTATION_SUMMARY.md  COURSE_QUICK_REFERENCE.md  COURSE_VERIFICATION_CHECKLIST.md  PORTFOLIO_PAGE_UPDATE_SUMMARY.md  PORTFOLIO_PAGE_UPDATE_SUMMARY_PHASE2.md  PORTFOLIO_STATS_BEFORE_AFTER.md  PORTFOLIO_STATS_CHECKLIST.md  PORTFOLIO_STATS_SECTION_IMPLEMENTATION.md  PORTFOLIO_STATS_UPDATE_FINAL.md  PORTFOLIO_STATS_VISUAL_REFERENCE.md  PRODUCT_DETAILS_PAGE_DOCUMENTATION.md  PRODUCT_DETAILS_PAGE_QUICK_START.md  PRODUCT_DETAILS_PAGE_SUMMARY.md  PRODUCT_DETAILS_SETUP_CHECKLIST.md  PRODUCT_DETAILS_VISUAL_LAYOUT.md  PRODUCT_SLUG_IMPLEMENTATION.md  PROJECT_INDEX.md  QUICK_START_BLOG_DETAIL.md  QUOTE_MODAL_SEO_IMPLEMENTATION.md  SERVICES_CAROUSEL_IMPLEMENTATION.md  SERVICES_PAGE_DESIGN_REFERENCE.md  SERVICES_PAGE_FINAL_SUMMARY.md  SERVICES_PAGE_IMPROVEMENTS.md  SERVICES_PAGE_QUICK_REFERENCE.md  SERVICES_PAGE_TESTING_CHECKLIST.md  SLUG_QUICK_START.md  TASK_COMPLETION_SUMMARY.md  notes.txt
backend/: db.sqlite3  populate_complete_products.py  populate_courses.py  populate_data.py  populate_product_details.py  pyproject.toml  requirements.txt  verify_blog.py
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
(+164 files in other folders)
